--- a/tigacrafting/templates/tigacrafting/aimalog_process.html
+++ b/tigacrafting/templates/tigacrafting/aimalog_process.html
@@ -65,7 +65,7 @@
     </head>
 <body>
     <div class="container">
-        <h1 class="text-center">Process Alert</h1>
+        <h1 class="text-center">Process Alert - {{ alert.id }}</h1>
 <!--        <h3>Review Alert status</h3>-->
 <!--        <div class="alert_info_wrapper alert alert-info">-->
 <!--            <div class="row">-->
