--- a/tigacrafting/templates/tigacrafting/aimalog_process.html
+++ b/tigacrafting/templates/tigacrafting/aimalog_process.html
@@ -51,6 +51,9 @@
                                 <a href="{% url 'expert_report_annotation' %}">Back to entolab</a>
                             </li>
                             <li>
+                                <a href="{% url 'aimalog' %}">Back to Alerts</a>
+                            </li>
+                            <li>
                                 <p class="navbar-text">{{ request.user.username }}</p>
                             </li>
                             <li>
