--- a/tigacrafting/templates/tigacrafting/aimalog.html
+++ b/tigacrafting/templates/tigacrafting/aimalog.html
@@ -157,6 +157,7 @@
                         <input id="date_to" type="text" class="form-control">
                     </div>
                 </div>
+                <!--
                 <div class="form-group">
                     <label for="review_date_from" class="col-sm-1 control-label">Rev. date - From</label>
                     <div class="col-sm-5">
@@ -167,8 +168,9 @@
                         <input id="review_date_to" type="text" class="form-control">
                     </div>
                 </div>
+                -->
                 <div class="form-group">
-                    <label for="species" class="col-sm-1 control-label">Species</label>
+                    <label for="species" class="col-sm-1 control-label">AIMA Species</label>
                     <div class="col-sm-5">
                         <select class="form-control" id="species">
                             <option value="">-----</option>
@@ -188,7 +190,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="status" class="col-sm-1 control-label">Status</label>
+                    <label for="status" class="col-sm-1 control-label">AIMA Status</label>
                     <div class="col-sm-5">
                         <select class="form-control" id="status">
                             <option value="">-----</option>
