--- a/tigacrafting/templates/tigacrafting/aimalog_process.html
+++ b/tigacrafting/templates/tigacrafting/aimalog_process.html
@@ -505,6 +505,9 @@
                     <button type="button" id="confirm_review" class="btn btn-default">Yes</button>
                     <button type="button" id="no_review" class="btn btn-default">No</button>
                 </div>
+                <div class="modal-footer" id="writing_status_spinner" style="display:none;">
+                    <h1>Writing status to shapefile <i class="fa fa-spinner fa-spin fa-fw" aria-hidden="true"></i></h1>
+                </div>
             </div>
         </div>
     </div>
