--- a/tigacrafting/templates/tigacrafting/aimalog_process.html
+++ b/tigacrafting/templates/tigacrafting/aimalog_process.html
@@ -70,56 +70,6 @@
 <body>
     <div class="container">
         <h1 class="text-center">Process Alert - {{ alert.id }}</h1>
-<!--        <h3>Review Alert status</h3>-->
-<!--        <div class="alert_info_wrapper alert alert-info">-->
-<!--            <div class="row">-->
-<!--                <div class="col-md-3">-->
-<!--                    {% if alert.alert_sent %}-->
-<!--                        <h1><span title="This Alert has been reviewed" class="label label-success">Processed</span></h1>-->
-<!--                    {% else %}-->
-<!--                        <h1><span title="This Alert has yet to be reviewed" class="label label-warning">Unprocessed</span></h1>-->
-<!--                    {% endif %}-->
-<!--                </div>-->
-<!--                <div class="col-md-9">-->
-<!--                    {% if alert.alert_sent %}-->
-<!--                    <div class="row">-->
-<!--                        <div class="col-md-2"><b>Reviewed at:</b></div>-->
-<!--                        <div class="col-md-10">{{ alert.review_datetime }}</div>-->
-<!--                    </div>-->
-<!--                    <div class="row">-->
-<!--                        <div class="col-md-2"><b>Review species:</b></div>-->
-<!--                        <div class="col-md-10">{{ alert.review_species }}</div>-->
-<!--                    </div>-->
-<!--                    <div class="row">-->
-<!--                        <div class="col-md-2"><b>Review status:</b></div>-->
-<!--                        <div class="col-md-10">{{ alert.review_status }}</div>-->
-<!--                    </div>-->
-<!--                    {% else %}-->
-<!--                    <div class="row">-->
-<!--                        <div class="col-md-2"><b>Review species:</b></div>-->
-<!--                        <div class="col-md-8">-->
-<!--                            <select id="review_species" class="form-control" >-->
-<!--                                <option value="">-&#45;&#45;&#45;&#45;&#45;&#45;</option>-->
-<!--                                {% for f in review_species %}-->
-<!--                                <option value="{{ f }}">{{ f }}</option>-->
-<!--                                {% endfor %}-->
-<!--                            </select>-->
-<!--                        </div>-->
-<!--                        <div class="col-md-2">-->
-<!--                            <button class="btn btn-primary button-review" id="review">Review <span class="glyphicon glyphicon-thumbs-down"></span></button>-->
-<!--                            <button class="btn btn-primary button-review" id="ok_ia">Ok IA <span class="glyphicon glyphicon-thumbs-up"></span></button>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="row">-->
-<!--                        <div class="col-md-2"><b>Review comments:</b></div>-->
-<!--                        <div class="col-md-8">-->
-<!--                            <textarea id="review_comment"></textarea>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    {% endif %}-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
         <div class="alert_communication_wrapper" style="display:{% if alert.alert_sent %}block{%else%}none{%endif%};">
             <h3>Alert communication status</h3>
             <div class="alert_info_wrapper alert alert-info">
@@ -150,7 +100,7 @@
                           <!--</label>-->
                     </div>
                     <div id="noedit_alert" class="col-md-12 alert alert-danger" style="display:none;">
-                        <p style="color:red;">Edition is not allowed while report validation is in progress</p>
+                        <p style="color:red;">Changing communication status is not allowed while report validation is in progress</p>
                     </div>
                 </div>
                 <div class="row">
