--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -4,12 +4,13 @@
 <head>
     <link rel="stylesheet" href="{% static 'tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'tigacrafting/font-awesome-4.7.0/css/font-awesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'tigacrafting/jquery-ui-1.12.1.custom/jquery-ui.min.css' %}">
     <style>
         .photo_grid {
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            margin-top: 60px;
+            margin-top: 20px;
         }
         .header_internal_wrapper {
             display: flex;
@@ -73,12 +74,16 @@
         .miniform { margin-left: 15px; margin-top: 10px;}
         li.miniform > span > span { color: white; }
         .form-inline { display: inline; }
-        .spinner { width: 100%; height: 70px; margin-top: 60px;}
         #filter_status {
             margin-top: 60px;
+            margin-bottom: 10px;
+            margin-left: 10px;
+            margin-right: 10px;
         }
     </style>
     <script src="{% static 'tigacrafting/jquery/1.11.1/jquery.min.js' %}"></script>
+    <script src="{% static 'tigacrafting/jquery-ui-1.12.1.custom/jquery-ui.min.js' %}"></script>
+    <script src="{% static 'tigacrafting/jquery-ui/jquery-ui.min.js' %}"></script>
     <script src="{% static 'tigacrafting/bootstrap-3.2.0-dist/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'tigacrafting/javascript/coarse_filter.js' %}"></script>
     <script src="{% static 'tigacrafting/d3/d3.min.js' %}"></script>
@@ -101,6 +106,7 @@
                         <div class="navbar-brand">
                             <span style="color:#ff9900; font-size: small">
                                 MosquitoAlert Picture Validation
+                                <i id="gear" class="fa fa-refresh fa-spin" style="display: none;"></i>
                             </span>
 
                         </div>
@@ -201,7 +207,7 @@
                             <label for="slider" class="col-sm-4 control-label">Show only report adults with ia index less or equal than:</label>
                             <div class="col-sm-8">
                                 <div id="slider"></div>
-                                <div id="slider_value">0.75</div>
+                                <div id="slider_value">1.0</div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -213,7 +219,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <a class="btn btn-primary" href="{% url 'picture_validation' %}">Clear Filters</a>
+                    <!--<a class="btn btn-primary" href="{% url 'picture_validation' %}">Clear Filters</a>-->
+                    <button type="button" id="filters_clear" class="btn btn-primary">Clear Filters</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <button type="button" id="filters_submit_button" class="btn btn-warning">Apply</button>
                 </div>
@@ -222,14 +229,18 @@
     </div>
 
     <div class="container">
-        <div class="spinner">
-            <i class="fa fa-spinner fa-spin fa-5x fa-fw" aria-hidden="true"></i>
-        </div>
         <div id="filter_status">
-            <h1>Filter status</h1>
+            <strong>Filters:</strong>
+            Showing - <span class="badge" id="visibility_filter">All</span>,
+            User note contains - '<span class="badge" id="text_filter">Anything</span>',
+            Report type - <span class="badge" id="rtype_filter">All</span>,
+            Country - <span class="badge" id="country_filter">Any</span>,
+            AI Threshold - <= <span class="badge" id="ia_filter">1.0</span>
+            <br><strong>Reports Matching Current Filter/Search Criteria:</strong> <span class="badge" id="n_query_reports">??</span>
         </div>
         <div id="photo_grid" class="photo_grid">
         </div>
     </div>
     <input id="n_per_page" type="hidden">
+    <input id="filter_options" type="hidden">
 </body>
