--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -14,6 +14,7 @@
         }
         .header_internal_wrapper {
             display: flex;
+            justify-content: space-between;
             flex-direction: row;
         }
         .header_country {
@@ -63,6 +64,7 @@
             //width: 25px;
             //height: 25px;
             margin: 2px;
+            font-size: small;
         }
         .hrnomargin {
             margin-top: 2px !important;
@@ -83,6 +85,13 @@
         .hide_button {
             display: none;
         }
+        #filter_status {
+            text-align: center;
+        }
+        .header_visibility {
+            margin-right: 20px;
+            align-self: center;
+        }
     </style>
     <script src="{% static 'tigacrafting/jquery/1.11.1/jquery.min.js' %}"></script>
     <script src="{% static 'tigacrafting/jquery-ui-1.12.1.custom/jquery-ui.min.js' %}"></script>
@@ -92,6 +101,7 @@
     <script src="{% static 'tigacrafting/javascript/coarse_filter.js' %}"></script>
     <script src="{% static 'tigacrafting/d3/d3.min.js' %}"></script>
     <script src="{% static 'tigacrafting/ia_graph.js' %}"></script>
+    <script src="{% static 'tigacrafting/javascript/hover-preview.min.js' %}"></script>
     <script>
         var csrf_token = '{{ csrf_token }}';
     </script>
