--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -23,6 +23,8 @@
         .header_ia {
             margin: 10px;
             margin-left: 30px;
+            font-size: small;
+            color: white;
         }
         .pictures_internal_grid {
             display: flex;
@@ -51,12 +53,19 @@
             /*width: 500px;
             height: 400px;*/
             width: 450px;
-            height: 400px;
+            height: 280px;
             background-color: red;
             margin: 10px;
         }
         .body_internal_wrapper {
-            margin: 20px;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            margin: 10px;
+        }
+        .label_wrapper {
+            font-size: x-small;
+            padding: 2px;
         }
         .body_internal_wrapper p {
             text-align: justify;
@@ -70,7 +79,7 @@
         }
         .hrnomargin {
             margin-top: 2px !important;
-            margin-bottom: 7px !important;
+            margin-bottom: 2px !important;
         }
         .site.storm_drain { background-color: #4169E1; }
         .site.other { background-color: #a7b9f1; }
